Update program-card display and order properties

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1217,11 +1217,12 @@ footer {
 
   .program-card {
     flex-direction: column;
+    display: flex;
   }
 
   .program-image {
     height: 200px;
-    order: 0;
+    order: -1;
   }
 
   .program-content {
