--- a/style/css/carousel.css
+++ b/style/css/carousel.css
@@ -14,6 +14,7 @@
 }
 
 .carousel-slide {
+  transition: opacity 0.6s ease-in-out, visibility 0.6s ease-in-out;
   position: absolute; /* 🔥 INI YANG KURANG! */
   top: 0;
   left: 0;
